--- a/src/locale/de/LC_MESSAGES/django.po
+++ b/src/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-05-27 21:27+0000\n"
-"PO-Revision-Date: 2015-05-27 23:28+0100\n"
+"PO-Revision-Date: 2015-05-28 21:40+0100\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: Raphael Michel <michel@rami.io>\n"
 "Language: de\n"
@@ -1128,7 +1128,7 @@ msgstr "Bestellte Produkte"
 #: pretix/presale/templates/pretixpresale/event/fragment_cart.html:13
 #: pretix/presale/templates/pretixpresale/event/fragment_cart.html:17
 msgid "not answered"
-msgstr "nicht beantworted"
+msgstr "nicht beantwortet"
 
 #: pretix/control/templates/pretixcontrol/order/index.html:75
 #: pretix/presale/templates/pretixpresale/event/fragment_cart.html:59
@@ -1485,7 +1485,7 @@ msgstr ""
 
 #: pretix/control/views/main.py:91
 msgid "The new event has been created."
-msgstr "Ein neues Kontingent wurde erstellt."
+msgstr "Eine neue Veranstaltung wurde erstellt."
 
 #: pretix/control/views/orders.py:121
 msgid "The order has been marked as paid."
@@ -2268,7 +2268,8 @@ msgstr "Ihr Warenkorb"
 #, python-format
 msgid "The items in your cart are reserved for you for %(minutes)s minutes."
 msgstr ""
-"Die Produkte in Ihrem Warenkorb sind noch %(minutes)s für Sie reserviert."
+"Die Produkte in Ihrem Warenkorb sind noch %(minutes)s Minuten für Sie "
+"reserviert."
 
 #: pretix/presale/templates/pretixpresale/event/checkout_confirm.html:31
 #: pretix/presale/templates/pretixpresale/event/index.html:19
@@ -2514,8 +2515,6 @@ msgid "You cannot select more than %s items per order"
 msgstr "Sie können nicht mehr als %s Produkte pro Bestellung auswählen"
 
 #: pretix/presale/views/cart.py:103
-#, fuzzy
-#| msgid "The presale for this event has not yet started."
 msgid "The presale period for this event has not yet started."
 msgstr "Der Vorverkauf für diese Veranstaltung hat noch nicht begonnen."
 
