--- a/src/locale/de/LC_MESSAGES/django.po
+++ b/src/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-21 19:18+0000\n"
-"PO-Revision-Date: 2015-06-21 21:19+0100\n"
+"PO-Revision-Date: 2015-06-23 09:51+0100\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: Raphael Michel <michel@rami.io>\n"
 "Language: de\n"
@@ -1483,7 +1483,7 @@ msgstr "Als nicht bezahlt markieren"
 #: pretix/control/templates/pretixcontrol/order/refund.html:4
 #: pretix/control/templates/pretixcontrol/order/refund.html:8
 msgid "Refund order"
-msgstr "Bestellung erstatteten"
+msgstr "Bestellung erstatten"
 
 #: pretix/control/templates/pretixcontrol/order/index.html:42
 #: pretix/presale/templates/pretixpresale/event/order.html:65
