Updated a German translation to clarify things

--- a/src/locale/de/LC_MESSAGES/django.po
+++ b/src/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-12 16:40+0000\n"
-"PO-Revision-Date: 2015-07-12 18:44+0200\n"
+"PO-Revision-Date: 2015-07-26 00:32+0200\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: Raphael Michel <michel@rami.io>\n"
 "Language: de\n"
@@ -1872,8 +1872,8 @@ msgid ""
 "following bank account, using a personal reference code."
 msgstr ""
 "Nach Abschluss der Bestellung werden wir Sie auffordern, das Geld unter "
-"Verwendung eines persönlichen Verwendungszwecks auf das folgende Bankkonto "
-"zu überweisen."
+"Verwendung eines persönlich generierten Verwendungszwecks auf das folgende "
+"Bankkonto zu überweisen."
 
 #: pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/control.html:4
 msgid "This order has been paid via bank transfer."
