--- a/src/pretix/locale/de/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/de/LC_MESSAGES/djangojs.po
@@ -7,16 +7,34 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-10 14:29+0000\n"
-"PO-Revision-Date: 2016-04-10 16:29+0200\n"
+"POT-Creation-Date: 2016-04-10 15:19+0000\n"
+"PO-Revision-Date: 2016-04-10 17:20+0200\n"
+"Last-Translator: Raphael Michel <michel@rami.io>\n"
+"Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: Raphael Michel <michel@rami.io>\n"
-"Language-Team: \n"
 "X-Generator: Poedit 1.8.7.1\n"
+
+#: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
+#: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
+msgid "Placed orders"
+msgstr "Getätigte Bestellungen"
+
+#: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
+#: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
+msgid "Paid orders"
+msgstr "Bezahlte Bestellungen"
+
+#: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:21
+msgid "Total revenue"
+msgstr "Gesamtumsatz"
+
+#: pretix/plugins/stripe/static/pretixplugins/stripe/pretix-stripe.js:47
+msgid "Contacting Stripe…"
+msgstr "Kontaktiere Stripe…"
 
 #: static/pretixpresale/js/ui/asynctask.js:59
 msgid "We are processing your request…"
