Add markdown to requirements. Update authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,13 @@
 Here is an inevitably incomplete list of much-appreciated contributors --
 people who have submitted patches, reported bugs, added translations, helped
-answer newbie questions, improved the documentation, and generally made pretix 
+answer newbie questions, improved the documentation, and generally made pretix
 an awesome project. Thank you all!
 
 	Alexander Brock <Brock.Alexander@web.de>
 	Ben Oswald
 	Christian Franke <nobody@nowhere.ws>
 	informancer <informancer@web.de>
+    Flavia Bastos
 	Jason Estibeiro <jasonestibeiro@live.com>
 	Jan Weiß
 	Jonas Große Sundrup <cherti@letopolis.de>
@@ -16,4 +17,3 @@ an awesome project. Thank you all!
 	Team MRMCD
 	Tobias Kunze <rixx@cutebit.de>
 	Oliver Knapp <github@oliverknapp.de>
-
